@@ -2,7 +2,7 @@
 abstract: 'Perl module for structured errors.'
 author:
   - 'Jan Pomikalek <xpomikal@fi.muni.cz>'
-  - 'Michal Spacek <skim@cpan.org>'
+  - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
   English: 0
   ExtUtils::MakeMaker: 6.36
