@@ -31,7 +31,7 @@ COPYRIGHT AND LICENCE
 =====================
 
 Copyright (C) 2004 by Jan Pomikálek
-Copyright (C) 2009-2015 by Michal Špaček
+Copyright (C) 2009-2015 by Michal Josef Špaček
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.4 or,
